fix overlapping dynamic and static numbers on challenge chart

--- a/src/components/charts/scatter-plot/scatter-plot-styles.module.scss
+++ b/src/components/charts/scatter-plot/scatter-plot-styles.module.scss
@@ -72,7 +72,11 @@ $chart-margin: 14px;
 }
 
 .tickValue {
+  background-color: $elephant;
+  border-radius: 2px;
+  padding: 2px 6px;
   width: auto;
+  z-index: $bring-to-front;
 }
 .xAxis {
   transform: translateX(-50%);
